<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodHood</string>
    <string name="food_by_zip">By Zipcode</string>
    <string name="order_history">Order history</string>
    <string name="food_near_me">Near me</string>
    <string name="chop_board">Chop Board</string>
    <string name="chef_orders">Chef Orders</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_usa">Hello usa!</string>
    <string name="hello_india">Hello india!</string>
    <string name="hello_login">Hello login!</string>
    <string name="hello_signup">Hello signup!</string>
    <string name="action_cart">Cart</string>
    <string name="action_Login">Login</string>
    <string name="action_Loggedin_user">username</string>
    <string name="action_Logout">Logout</string>
    <string name="title_activity_chop_board_fragment">ChopBoardFragment</string>
    <string name="title_activity_checkout">Check out</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fragment_main_chop_board">FragmentMainChopBoard</string>
    <string name="title_activity_fragment_by_zipcode">FragmentByZipcode</string>
    <string name="title_activity_fragment_near_me">FragmentNearMe</string>
    <string name="title_activity_login_or_signup_activity_main">Login/Signup</string>
    <string name="title_activity_fragment_login_tab_name">Login</string>
    <string name="title_activity_fragment_signup_tab_name">SignUp</string>
    <string name="title_activity_fragment_signup">FramentSignup</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="username">Enter Email</string>
    <string name="signup_username">Enter Email</string>
    <string name="chef_name">Chef : </string>
    <string name="chef_full_name">Firstname, Lastname </string>
    <string name="chef_address">Food Neighbourhood :</string>
    <string name="first_name">Firstname </string>
    <string name="last_name">Lastname </string>
    <string name="enter_pwd">Enter Password </string>
    <string name="password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_as_chef">am a Chef</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="sign_in">Login</string>
    <string name="submit">Submit</string>
    <string name="forgot_pwd"><u>Forgot Password</u></string>
    <string name="user_msg">Enter your user email id</string>
    <string name="cancel">Cancel</string>
    <string name="new_user">New to FoodWood?\u0020</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="item_available"><big>Item is available from</big></string>
    <string name="item_till"><big>Item is available till</big></string>
    <string name="item_available_date">From date</string>
    <string name="item_till_date">Till date</string>
    <string name="item_available_time">From time</string>
    <string name="item_till_time">Till time</string>
    <string name="home_num">House/Apt name and no</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="quantity">qty</string>
    <string name="price">price/item</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="subtotal">subtotal </string>
    <string name="amount">Amt</string>
    <string name="zipcode">Zipcode</string>
    <string name="post_to_menu">Post my item</string>
    <string name="chef_code">Enter the code given </string>
    <string name="or"><big>OR </big></string>
    <string name="call_us">Call us at </string>
    <string name="call_number">973-123-3455 </string>
    <string name="btn_activate">Activate </string>
    <string name="acct_create_confirm">Account created. You are all set </string>
    <string name="btn_continue">Continue </string>
    <string name="food_image">Food Image </string>
    <string name="ava_now">Available </string>
    <string name="ava_when">Now </string>
    <string name="ava_till">Available till </string>
    <string name="item_price">Price </string>
    <string name="ava_till_hrs">24hrs </string>
    <string name="add_now">Order </string>
    <string name="item_name">Item name  </string>
    <string name="item_name_quant"><u>Item name (qty)</u></string>
    <string name="hist_item_till"><u>Till</u></string>
    <string name="hist_item_amount"><u>Item price</u></string>
    <string name="pickup_by">Pick up by :: </string>
    <string name="user_name">User Name</string>
    <string name="payment_status">Payment status ::</string>
    <string name="by">by </string>
    <string name="item_chef_name">Sri Harsha </string>
    <string name="address_label">Address </string>
    <string name="address1">1227 Links Drive </string>
    <string name="address2">Preston Area </string>
    <string name="address3">morrisville, NC,27560</string>
    <string name="add_order_toggle_on">Add </string>
    <string name="added_toggle">In cart </string>
    <string name="add_to_menu">Add a menu item </string>
    <string name="go_to_cart">Go to cart </string>
    <string name="checkout">Check out</string>
    <string name="pick_up_at">Pick up at :: </string>
    <string name="title_activity_account_creation_confirmation">AccountCreated</string>
    <string name="title_activity_chef_account_validation">Chef Account Validation</string>
    <string name="title_activity_create_chef_menu_item">Add a menu item</string>
    <string name="title_cart">Cart items</string>
    <string name="total_amount">Total Amount to be paid : </string>
    <string name="mark_as_paid">Mark as payment received</string>

</resources>