<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="horizontal"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/food_image"
            android:src="@drawable/pani_puri" >
        </ImageView>

        <TextView
            android:id="@+id/available_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ava_now" >
        </TextView>

        <TextView
            android:id="@+id/chefItemAvailableFromId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/ava_when"
            android:textSize="14sp" >
        </TextView>

        <TextView
            android:id="@+id/chefItemAvailableFromTimeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="5dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/item_name"
            android:textSize="14sp" >
        </TextView>

        <TextView
            android:id="@+id/by_chef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by"
            android:textSize="14sp" >
        </TextView>

        <TextView
            android:id="@+id/chefFullNameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_chef_name"
            android:textSize="14sp" >
        </TextView>

        <TextView
            android:id="@+id/chefHomeNumId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/address1"
            android:textSize="14sp" >
        </TextView>

        <TextView
            android:id="@+id/chefStreetNameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address2"
            android:textSize="14sp" >
        </TextView>

        <TextView
            android:id="@+id/chefCityStateZipId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address3"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_weight="0"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/chef_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/item_price"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/available_till"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ava_till"
            android:textSize="14sp" >
        </TextView>

        <TextView
            android:id="@+id/chefItemAvailableTillId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/ava_till_hrs"
            android:textSize="16sp" >
        </TextView>

        <TextView
            android:id="@+id/chefItemAvailableTillTimeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="16sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>