<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wattscorp.foodhoodui.FoodWoodMainActivity" >

   <!-- <item
        android:id="@+id/action_cart_id"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_action_shopping_cart"
        android:title="@string/action_cart"
        app:showAsAction="ifRoom"/> --> 
    
    <item
        android:id="@+id/action_Login_id"
        android:orderInCategory="100"
        android:title="@string/action_Login"
        app:showAsAction="never"/>
    
     <item
        android:id="@+id/action_Loggedin_user_id"
        android:orderInCategory="100"
        android:title="@string/action_Loggedin_user"
        app:showAsAction="never"/>
     
      <item
        android:id="@+id/action_Logout_id"
        android:orderInCategory="100"
        android:title="@string/action_Logout"
        app:showAsAction="never"/>

</menu>
